// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select add className 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0 foo"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
/>
`;

exports[`Select choices choice 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue="medium"
  multiple={false}
  onChange={[Function]}
>
  <option
    key="mild"
    value="mild"
  >
    Mild
  </option>
  <option
    key="hot"
    value="hot"
  >
    Hot
  </option>
  <option
    key="fire"
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select choices choices 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
>
  <option
    key="Mild"
    value="Mild"
  >
    Mild
  </option>
  <option
    key="Hot"
    value="Hot"
  >
    Hot
  </option>
  <option
    key="Fire"
    value="Fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select choices choices as objects 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
>
  <option
    key="mild"
    value="mild"
  >
    Mild
  </option>
  <option
    key="hot"
    value="hot"
  >
    Hot
  </option>
  <option
    key="fire"
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select empty 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
/>
`;

exports[`Select groups children 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
>
  <option
    value="meximelt"
  >
    Mexi-melt
  </option>
</select>
`;

exports[`Select groups children with choices 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
>
  <option
    key="mild"
    value="mild"
  >
    Mild
  </option>
  <option
    key="hot"
    value="hot"
  >
    Hot
  </option>
  <option
    key="fire"
    value="fire"
  >
    Fire
  </option>
  <option
    value="meximelt"
  >
    Mexi-melt
  </option>
</select>
`;

exports[`Select groups no value 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
>
  <optgroup
    key="Tacos"
    label="Tacos"
  >
    <option
      key="crunchy"
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      key="soft"
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    key="Saunce"
    label="Saunce"
  >
    <option
      key="mild"
      value="mild"
    >
      Mild
    </option>
    <option
      key="hot"
      value="hot"
    >
      Hot
    </option>
    <option
      key="fire"
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select groups value 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue="mild"
  multiple={false}
  onChange={[Function]}
>
  <optgroup
    key="Tacos"
    label="Tacos"
  >
    <option
      key="crunchy"
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      key="soft"
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    key="Saunce"
    label="Saunce"
  >
    <option
      key="mild"
      value="mild"
    >
      Mild
    </option>
    <option
      key="hot"
      value="hot"
    >
      Hot
    </option>
    <option
      key="fire"
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select groups values 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={
    Array [
      "soft",
      "mild",
    ]
  }
  multiple={true}
  onChange={[Function]}
>
  <optgroup
    key="Tacos"
    label="Tacos"
  >
    <option
      key="crunchy"
      value="crunchy"
    >
      Crunchy
    </option>
    <option
      key="soft"
      value="soft"
    >
      Soft
    </option>
  </optgroup>
  <optgroup
    key="Saunce"
    label="Saunce"
  >
    <option
      key="mild"
      value="mild"
    >
      Mild
    </option>
    <option
      key="hot"
      value="hot"
    >
      Hot
    </option>
    <option
      key="fire"
      value="fire"
    >
      Fire
    </option>
  </optgroup>
</select>
`;

exports[`Select multiple false 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
/>
`;

exports[`Select multiple falsey 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={true}
  onChange={[Function]}
/>
`;

exports[`Select multiple string 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={true}
  onChange={[Function]}
/>
`;

exports[`Select multiple true 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={true}
  onChange={[Function]}
/>
`;

exports[`Select multiple truthy 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={true}
  onChange={[Function]}
/>
`;

exports[`Select placeholder choices 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
>
  <option
    key="-- Select Flavor --"
    value=""
  >
    -- Select Flavor --
  </option>
  <option
    key="Mild"
    value="Mild"
  >
    Mild
  </option>
  <option
    key="Hot"
    value="Hot"
  >
    Hot
  </option>
  <option
    key="Fire"
    value="Fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select placeholder choices as objects 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
>
  <option
    key="-- Select Flavor --"
    value=""
  >
    -- Select Flavor --
  </option>
  <option
    key="mild"
    value="mild"
  >
    Mild
  </option>
  <option
    key="hot"
    value="hot"
  >
    Hot
  </option>
  <option
    key="fire"
    value="fire"
  >
    Fire
  </option>
</select>
`;

exports[`Select placeholder no choices 1`] = `
.emotion-0 {
  background-color: #fff;
  border: 1px solid #e6e6e6;
  border-radius: 0;
  box-shadow: inset 0 1px 2px rgba(0,0,0,0.07);
  box-sizing: border-box;
  color: #32373c;
  font-size: 14px;
  outline: none;
  -webkit-transition: 0.05s border-color ease-in-out;
  transition: 0.05s border-color ease-in-out;
  height: 28px;
  line-height: 28px;
  margin: 1px;
  max-width: 200px;
  padding: 2px;
  vertical-align: middle;
}

.emotion-0[multiple] {
  display: block;
  height: auto;
  width: 100%;
}

<select
  className="emotion-0"
  defaultValue={null}
  multiple={false}
  onChange={[Function]}
>
  <option
    key="-- Select Flavor --"
    value=""
  >
    -- Select Flavor --
  </option>
</select>
`;
